<resources>
    <string name="app_name">RCP Companion</string>
    <string name="title_media">Media</string>
    <string name="title_system">System</string>
    <string name="title_lighting">Lighting</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="play_pause">Play Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="settings">Settings</string>
    <string name="category_general">General</string>
    <string name="category_rest">REST</string>
    <string name="user">Username</string>
    <string name="base_url">Base URL</string>
    <string name="not_playing">Not playing</string>
    <string name="category_lastfm">Last.fm</string>
    <string name="api_key">API Key</string>
    <string name="last_fm_profile">Last.fm Profile</string>
    <string name="album_art">Album Art</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="brightness">Brightness</string>
    <string name="lock_workstation">Lock Workstation</string>
    <string name="shutdown_now">Shutdown now</string>
    <string name="shutdown_custom">Shutdown later</string>
    <string name="shutdown">Shutdown</string>
    <string name="send_notification">Send Notification</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="when">When?</string>
    <string name="notification_sent">Notification sent</string>
    <string name="workstation_locked">Workstation locked</string>
    <string name="shutdown_scheduled">Shutdown scheduled</string>
    <string name="status_refreshing">Refreshing now playing…</string>
    <string name="status_lastfm">Getting song info from Last.fm…</string>
    <string name="status_loading_cover">Loading album cover…</string>
</resources>