<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.system.SystemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_lock_workstation"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingEnd="8dp"
            android:text="@string/lock_workstation"
            app:cornerRadius="@dimen/rounded_corners"
            app:icon="@drawable/computer"
            app:iconPadding="8dp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group_shutdown"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_shutdown_now"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:paddingEnd="8dp"
                android:text="@string/shutdown_now"
                app:cornerRadius="@dimen/rounded_corners"
                app:icon="@drawable/power"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_shutdown_custom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:paddingEnd="8dp"
                android:text="@string/shutdown_custom"
                app:cornerRadius="@dimen/rounded_corners"
                app:icon="@drawable/schedule"
                app:strokeColor="#33FFFFFF"
                app:strokeWidth="1dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_notification"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingEnd="8dp"
            android:text="@string/send_notification"
            app:cornerRadius="@dimen/rounded_corners"
            app:icon="@drawable/send"
            app:iconPadding="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
