<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.media.MediaFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-44dp">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh_track"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/media_button_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollview_track"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/track_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="0dp">

                <!-- Your ImageView and Buttons for track info -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/album_art_imageview"
                    android:layout_width="260dp"
                    android:layout_height="260dp"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/album_art"
                    android:scaleType="fitCenter"
                    app:shapeAppearanceOverlay="@style/RoundedImageView"
                    tools:srcCompat="@drawable/default_album_cover" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_title"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="4dp"
                    android:enabled="false"
                    android:singleLine="true"
                    tools:text="Royal Beggars" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_artist"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="4dp"
                    android:enabled="false"
                    android:singleLine="true"
                    tools:text="Architects" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_album"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:enabled="false"
                    android:singleLine="true"
                    tools:text="Holy Hell" />

            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/media_button_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_stop"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/stop"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                app:icon="@drawable/stop"
                app:iconSize="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mute"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/mute"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                app:icon="@drawable/mute"
                app:iconSize="20dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_previous"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/previous"
            android:stateListAnimator="@animator/button_press_animator"
            app:icon="@drawable/previous"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_playpause"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="0dp"
            android:contentDescription="@string/play_pause"
            android:stateListAnimator="@animator/button_press_animator"
            app:icon="@drawable/playpause"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="35dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/next"
            android:stateListAnimator="@animator/button_press_animator"
            app:icon="@drawable/next"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_volup"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/volume_up"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                app:icon="@drawable/volume_up"
                app:iconSize="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_voldown"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/volume_down"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                app:icon="@drawable/volume_down"
                app:iconSize="20dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>